# quantum-examples

./: .gitignore  LICENSE  README.md
demo/: README.md  common.sh  run-all.sh
demo/01-bell/: README.md  bell.aria  inspect.sh
demo/02-qft/: README.md  inspect.sh  qft.aria
demo/03-rust-harness/: Cargo.toml  README.md  circuit.qasm  run.sh
demo/03-rust-harness/src/: main.rs
demo/04-qos/: README.md  run.sh
demo/05-optimizer/: README.md  ghz.aria  ghz_naive.qasm  inspect.sh
demo/06-finance/: README.md  run.sh
demo/07-qml-qcbm/: README.md  qcbm.aria  run.sh
demo/08-qml-classifier/: README.md  classifier.aria  run.sh
demo/09-mbqc/: README.md  mbqc_bell.aria  run.sh
demo/10-ubqc/: README.md  run.sh
demo/11-lean4/: README.md  run.sh
demo/12-ecc/: README.md  run.sh  surface.aria  surface.qasm
demo/13-pauliprop/: README.md  ghz24.qasm  run.sh  trotter_ising.aria  trotter_ising.qasm
demo/data/: README.md  make-synthetic.sh  synthetic_daily.csv
docs/: aria-tutorial.md
editors/: README.md  install.sh
editors/nvim/ftdetect/: aria.vim
editors/nvim/ftplugin/: aria_quantum.vim  aria_strat.vim
editors/nvim/syntax/: aria_fin.vim  aria_hdl.vim  aria_quantum.vim  aria_strat.vim
editors/samples/: fin_demo.aria  fin_demo.fs  hdl_demo.ahdl  quantum_demo.aria  strat_demo.aria
editors/tree-sitter-aria/: grammar.js  package.json
editors/tree-sitter-aria/queries/: highlights.scm
editors/vscode/: language-configuration-default.json  language-configuration-strat.json  package.json
editors/vscode/syntaxes/: aria-fin.tmLanguage.json  (+3 more)
(+1 files in other folders)
