# Standalone Rust harness — NOT part of the toolkit workspace.
# It depends on nothing from the toolkit source; it talks to the shipped
# `quantum-server` binary over the AF_UNIX JSON-RPC socket. The empty
# [workspace] table detaches this crate from any parent workspace so it
# builds on its own against a customer's checkout.
[workspace]

[package]
name = "quantum-demo-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"

[[bin]]
name = "harness"
path = "src/main.rs"
